--- a/index2.html
+++ b/index2.html
@@ -140,7 +140,7 @@
                 
             </p>
         </div>
-        <img src="Divya_med.jpg" alt="Divya's Picture">
+        <img src="Divya.jpg" alt="Divya's Picture">
     </div>
 
     <!-- Slide 2: Work Section -->
