--- a/index2.html
+++ b/index2.html
@@ -140,7 +140,7 @@
                 
             </p>
         </div>
-        <img src="Divya.jpg" alt="Divya's Picture">
+        <img src="Divya_med.jpg" alt="Divya's Picture">
     </div>
 
     <!-- Slide 2: Work Section -->
@@ -155,7 +155,7 @@
         <p>Feel free to reach out for collaborations or inquiries!</p>
         <a href="mailto:nadikoppula.divya@gamil.com">Email Me</a>
         <a href="https://linkedin.com/in/divyandk" target="_blank">LinkedIn</a>
-        <a href="Call:+46-(0)761551867">Phone</a>
+        <a href="Call:+33-(0)783815922">Phone</a>
     </div>
 </div>
 
