--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Illustrator Portfolio</title>
+    <title>Divya Nadikoppula — Portfolio</title>
     <style>
         body {
             margin: 0;
@@ -149,15 +149,23 @@
         <img src="work-sample.jpg" alt="Work Sample">
     </div>
 
-    <!-- Slide 3: Contact Section -->
-    <div class="carousel-section" id="slide3">
-        <h1>Get in Touch</h1>
-        <p>Feel free to reach out for collaborations or inquiries!</p>
-        <a href="mailto:nadikoppula.divya@gamil.com">Email Me</a>
-        <a href="https://linkedin.com/in/divyandk" target="_blank">LinkedIn</a>
-        <a href="Call:+33-(0)783815922">Phone</a>
-    </div>
-</div>
+<!-- Footer Contact Section -->
+<footer style="
+  text-align:center;
+  padding:1.2rem;
+  background:#222;
+  color:#fff;
+  font-size:0.95rem;
+  margin-top:auto;">
+  <p>Get in touch:</p>
+  <p>
+    <a href="mailto:nadikoppula.divya@gmail.com" style="color:#5ac95a; text-decoration:none; margin:0 10px;" rel="noopener">Email</a>
+    <a href="https://linkedin.com/in/divyandk" style="color:#3a3a8d; text-decoration:none; margin:0 10px;" target="_blank" rel="noopener">LinkedIn</a>
+    <a href="https://github.com/divyandk" style="color:#c95a5a; text-decoration:none; margin:0 10px;" target="_blank" rel="noopener">GitHub</a>
+    <a href="tel:+33783815922" style="color:#888; text-decoration:none; margin:0 10px;" rel="noopener">Phone</a>
+  </p>
+  <p style="font-size:0.8rem; color:#bbb;">© 2025 Divya Nadikoppula</p>
+</footer>
 
 <!-- Navigation Buttons -->
 <div class="nav-buttons">
